# gui_nessie

./: .gitignore  AUTHORS.md  CMakeLists.txt  README  README.md  package.xml
ressources/: script-placement-fichiers.sh  setup.sh  setup_gz.sh  setup_gz5.sh  setup_gz6.sh  sonia.world  sonia_world.launch
ressources/models/sonia_sub/: ASM_SONIA_2013.URDF  model.config
ressources/worlds/: sonia.world
src/com_gazebo/: CMakeLists.txt  package.xml
src/com_gazebo/src/: listener.cpp  talker.cpp  tmp
src/gui_nessie/: main.cc
src/gui_nessie/plugins/: pose_publisher.cc  pose_publisher.h  thruster.cc  thruster.h
src/gui_nessie/ros/: auv7_emulator.cc  auv7_emulator.h
src/nessie_msgs/: CMakeLists.txt  package.xml
src/nessie_msgs/msg/: auv7_motor_control.msg
src/nessie_plugins/: CMakeLists.txt  package.xml
src/nessie_plugins/src/: gz_ros.cc  gz_ros.h  nessie_startup_plugin.cc  nessie_startup_plugin.h  pose_publisher.cc  pose_publisher.h  thruster.cc  thruster.h
src/nessie_ros/: CMakeLists.txt  package.xml
src/nessie_ros/src/: auv7_emulator.cc  auv7_emulator.h  main.cc
src/plugins/: CMakeLists.txt  package.xml
src/plugins/include/: dum_file
src/plugins/src/: hello_world.cc  thruster.cc  thruster.h
src/simsonia_msgs/: CMakeLists.txt  package.xml
src/simsonia_msgs/msg/: auv7_motor_control.msg
