<package>
  <!-- Package Metadata -->
  <name>gui_nessie</name>
  <maintainer email="tomesman@gmail.com">Thomas Fuhrmann</maintainer>
  <description>
    Nessie is the simulator of the team SONIA, based on Gazebo.
  </description>
  <version>0.0.1</version>
  <license>MIT</license>

  <!-- Required by Catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libgazebo6-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>libgazebo6-dev</run_depend>
</package>